--- a/challenge2.html
+++ b/challenge2.html
@@ -6,7 +6,10 @@
 <body>
     <!-- Create an HTML element with an id of "display" and use 
      JavaScript to change its text content to "Changed by JavaScript!". -->
-
-
+    <h1 id="display">Beeb</h1>
+    <script>
+        var changeJS = document.getElementById("display");
+        changeJS.innerHTML = "Changed by JavaScript!";
+    </script>
 </body>
 </html>
