--- a/challenge3.html
+++ b/challenge3.html
@@ -11,6 +11,10 @@
     <p>Paragraph 2</p>
     <p>Paragraph 3</p>
 
-    
+    <script>
+        var redP = document.getElementsByTagName("p");
+        console.log(redP);
+        redP.setAttribute("style", "color: red");
+    </script>
 </body>
 </html>
