--- a/challenge4.html
+++ b/challenge4.html
@@ -8,7 +8,9 @@
     <!-- Create a new <button> element using JavaScript and 
         add it to the existing webpage. The button text should 
         say "Click me!". -->
-
-    
+    <script>
+        var button = document.body.createElement("button");
+        button.innerHTML("Click me!");
+    </script>
 </body>
 </html>
